<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/timerdigits"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/default_timer"
        android:layout_gravity="center"
        android:gravity="center" />
    <ToggleButton
        android:id="@+id/btn_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerdigits"
        android:padding="20dip"
        android:layout_margin="3dip"
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_green"
        android:text="@string/button_start"
        android:textOn="@string/button_start"
        android:textOff="@string/button_start"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />
    <ToggleButton
        android:id="@+id/btn_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_up"
        android:padding="20dip"
        android:layout_margin="3dip" 
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_red"
        android:text="@string/button_stop"
        android:textOn="@string/button_stop"
        android:textOff="@string/button_stop"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>
    <!-- <ScrollView 
	        android:id="@+id/debug_sv"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_below="@id/btn_down">
    </ScrollView>
        android:layout_below="@id/debug"
    
     -->
    <TextView
        android:id="@+id/debug"
        android:layout_below="@id/btn_down"
        android:textSize="20sp"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />
    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="bottom"
        android:background="@android:color/background_dark"
        android:orientation="horizontal">

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/total_time"
	        android:textSize="20sp" />

	    <TextView
	        android:id="@+id/time_today"
	        android:textSize="20sp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:gravity="right"
	        android:text="@string/zero_secs" />
        
    </RelativeLayout>
    <!-- 
    <com.malcolmocean.metatimer.Visualization
        android:id="@+id/viz"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
         -->

</RelativeLayout>
